fix layout issue on small devices

--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -39,6 +39,7 @@
     }
     &-img {
       width: 50%;
+      max-height: 80px;
     }
   }
 }
